--- a/blocks/card.css
+++ b/blocks/card.css
@@ -16,6 +16,7 @@
   line-height: 1.2;
   color: #212121;
   margin: 0;
+  max-width: 353px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
@@ -34,6 +35,7 @@
   background-color: transparent;
   opacity: 0.4;
   border: 0;
+  cursor: pointer;
 }
 
 .card__button:hover {
@@ -43,5 +45,11 @@
 @media screen and (max-width: 630px) {
   .card__image {
     height: 288px;
+  }
+
+  .card__description {
+    font-size: 16px;
+    line-height: 1;
+    max-width: 235px;
   }
 }
