--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,7 +1,7 @@
 .cards {
   display: grid;
   grid-template-columns: repeat(auto-fit, 413px);
-  padding: 20px;
+  padding: 20px 20px 40px;
   column-gap: 20px;
   row-gap: 40px;
   border-bottom: 1px solid rgba(33, 33, 33, 0.4);
@@ -11,5 +11,7 @@
 @media screen and (max-width: 630px) {
   .cards {
     grid-template-columns: repeat(auto-fit, 288px);
+    row-gap: 20px;
+    padding-bottom: 20px;
   }
 }
