--- a/blocks/page.css
+++ b/blocks/page.css
@@ -2,6 +2,7 @@
   background-color: #fcf5e5;
   font-family: "Poppins", Arial, Helvetica, sans-serif;
   min-height: 100vh;
+  color: #212121;
 }
 
 .page__section {
