--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -13,16 +13,17 @@
 .profile__avatar {
   width: 190px;
   height: 190px;
-  border-radius: 4px;
+  border-radius: 8px;
 }
 
 .profile__name {
   margin: 0 0 12px;
   color: #212121;
   font-family: "Poppins", Arial, Helvetica, sans-serif;
-  font-weight: 500px;
+  font-weight: 500;
   font-size: 32px;
   line-height: 1;
+  max-width: 420px;
   display: -webkit-box;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -37,6 +38,7 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 1;
+  max-width: 420px;
   display: -webkit-box;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -45,7 +47,6 @@
 }
 
 .profile__edit-btn {
-  width: 108px;
   height: 16px;
   background-color: transparent;
   border: 0;
@@ -57,6 +58,9 @@
   font-size: 16px;
   line-height: 1;
   opacity: 0.7;
+  cursor: pointer;
+  display: flex;
+  gap: 8px;
 }
 
 .profile__edit-btn:hover {
@@ -78,6 +82,7 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 1;
+  cursor: pointer;
 }
 
 .profile__add-btn:hover {
