Complete javascript functionality and add transition

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -8,10 +8,13 @@
   left: 0;
   display: flex;
   padding: 10px;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
 }
 
 .modal_is-opened {
   visibility: visible;
+  opacity: 1;
 }
 
 .modal__container {
