--- a/blocks/card.css
+++ b/blocks/card.css
@@ -32,7 +32,12 @@
 }
 
 .card__button {
+  width: 23px;
+  height: 20px;
   background-color: transparent;
+  background-image: url(../images/heart.svg);
+  background-repeat: no-repeat;
+  background-position: center;
   opacity: 0.4;
   border: 0;
   cursor: pointer;
