--- a/blocks/cards.css
+++ b/blocks/cards.css
@@ -1,7 +1,8 @@
 .cards {
   display: grid;
   grid-template-columns: repeat(auto-fit, 413px);
-  padding: 20px 20px 40px;
+  padding: 20px 0 40px;
+  margin: 0;
   column-gap: 20px;
   row-gap: 40px;
   border-bottom: 1px solid rgba(33, 33, 33, 0.4);
