--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -61,7 +61,7 @@
 
 .modal__label {
   width: 100%;
-  font-family: Poppins;
+  font-family: "Poppins", Arial, Helvetica, sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.1;
