--- a/blocks/card.css
+++ b/blocks/card.css
@@ -1,15 +1,16 @@
 .card {
   display: flex;
   flex-direction: column;
+  position: relative;
 }
 
-.card__content {
+.card__footer {
   display: flex;
   justify-content: space-between;
   margin: 0;
 }
 
-.card__description {
+.card__title {
   font-family: "Poppins", Arial, Helvetica, sans-serif;
   font-weight: 500;
   font-size: 20px;
@@ -29,9 +30,10 @@
   object-fit: cover;
   margin-bottom: 12px;
   display: block;
+  cursor: pointer;
 }
 
-.card__button {
+.card__like-button {
   width: 23px;
   height: 20px;
   background-color: transparent;
@@ -43,8 +45,35 @@
   cursor: pointer;
 }
 
-.card__button:hover {
+.card__like-button:hover {
   opacity: 1;
+}
+
+.card__like-button_active {
+  background-image: url(../images/like-button-liked.png);
+  opacity: 1;
+}
+
+.card__like-button_active:hover {
+  opacity: 0.5;
+}
+
+.card__delete-button {
+  width: 32px;
+  height: 32px;
+  background-color: transparent;
+  background-image: url(../images/delete-button.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  border: 0;
+  cursor: pointer;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.card__delete-button:hover {
+  background-image: url(../images/delete-button-hover.png);
 }
 
 @media screen and (max-width: 630px) {
@@ -52,7 +81,7 @@
     height: 288px;
   }
 
-  .card__description {
+  .card__title {
     font-size: 16px;
     line-height: 1;
     max-width: 235px;
