--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -106,6 +106,50 @@
   background-color: rgba(33, 33, 33, 0.8);
 }
 
+.modal__image-container {
+  margin: auto;
+  position: relative;
+}
+
+.modal__image {
+  max-width: 80vw;
+  max-height: 80vh;
+  width: 100%;
+  object-fit: contain;
+  display: block;
+  border-radius: 8px;
+}
+
+.modal__caption {
+  background-color: #212121;
+  color: #ffffff;
+  border-radius: 8px;
+  object-fit: contain;
+  width: fit-content;
+  padding: 4px 8px;
+  margin-top: 8px;
+  margin-bottom: 0;
+  font-family: "Poppins", Arial, Helvetica, sans-serif;
+  font-weight: 500;
+  font-style: Medium;
+  font-size: 20px;
+  line-height: 1.2;
+}
+
+.modal__preview-close-btn {
+  position: absolute;
+  background-image: url(../images/preview-close-btn.png);
+  background-position: center;
+  opacity: 1;
+  right: -53px;
+  width: 40px;
+  height: 40px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+}
+
 @media screen and (max-width: 630px) {
   .modal__container {
     padding: 12px;
@@ -129,5 +173,18 @@
 
   .modal__submit-btn {
     max-width: none;
+  }
+
+  .modal__image {
+    max-width: 288px;
+  }
+
+  .modal__preview-close-btn {
+    top: -48px;
+    right: 0;
+  }
+
+  .modal__caption {
+    font-size: 16px;
   }
 }
