--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -18,6 +18,7 @@
 }
 
 .modal__container {
+  box-sizing: border-box;
   background-color: #ffffff;
   display: flex;
   flex-direction: column;
@@ -60,12 +61,14 @@
 }
 
 .modal__label {
+  display: block;
   width: 100%;
   font-family: "Poppins", Arial, Helvetica, sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.1;
   color: rgba(33, 33, 33, 0.7);
+  margin-bottom: 32px;
 }
 
 .modal__input {
@@ -73,7 +76,7 @@
   box-sizing: border-box;
   height: 52px;
   width: 100%;
-  margin: 8px 0 32px;
+  margin: 8px 0;
   border-radius: 8px;
   border-color: rgba(33, 33, 33, 0.4);
   padding: 0;
@@ -86,6 +89,19 @@
 
 .modal__input:hover {
   border-color: rgba(33, 33, 33, 1);
+}
+
+.modal__input_type_error {
+  border-color: rgba(255, 0, 0, 0.6);
+}
+
+.modal__error {
+  display: block;
+  color: rgba(255, 0, 0, 0.7);
+  font-family: "Poppins", Arial, Helvetica, sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.1;
 }
 
 .modal__submit-btn {
@@ -104,6 +120,10 @@
 
 .modal__submit-btn:hover {
   background-color: rgba(33, 33, 33, 0.8);
+}
+
+.modal__submit-btn_type_inactive {
+  background-color: rgba(33, 33, 33, 0.5);
 }
 
 .modal__image-container {
